<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5F5658"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd0"
        android:text="@string/btn_0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="304dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:background="#FF0056"
        android:onClick="mtdIgual"
        android:text="@string/btn_igual"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMultiplicar" />

    <Button
        android:id="@+id/btnPonto"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6154F"
        android:onClick="mtdPonto"
        android:text="@string/btn_ponto"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn0"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btnDividir"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6154F"
        android:onClick="mtdDividir"
        android:text="@string/btn_divi"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btnMultiplicar"
        app:layout_constraintTop_toBottomOf="@+id/btnSubtrair" />

    <Button
        android:id="@+id/btnMultiplicar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6154F"
        android:onClick="mtdMultiplicar"
        android:text="@string/btn_multi"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btnPonto"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <TextView
        android:id="@+id/tvOperacoes"
        android:layout_width="304dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textColor="#5C4D4D"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSubtrair"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6154F"
        android:onClick="mtdSubtrair"
        android:text="@string/btn_subt"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btnSomar" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:background="#DB3871"
        android:onClick="mtd8"
        android:text="@string/btn_8"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn7"
        app:layout_constraintTop_toBottomOf="@+id/tvResultados" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd2"
        android:text="@string/btn_2"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd5"
        android:text="@string/btn_5"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn4"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:background="#DB3871"
        android:onClick="mtd9"
        android:text="@string/btn_9"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn8"
        app:layout_constraintTop_toBottomOf="@+id/tvResultados" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd4"
        android:text="@string/btn_4"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd1"
        android:text="@string/btn_1"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <Button
        android:id="@+id/btnSomar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#D6154F"
        android:onClick="mtdSomar"
        android:text="@string/btn_somar"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd6"
        android:text="@string/btn_6"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn5"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="28dp"
        android:background="#DB3871"
        android:onClick="mtd7"
        android:text="@string/btn_7"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultados" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#DB3871"
        android:onClick="mtd3"
        android:text="@string/btn_3"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn2"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="28dp"
        android:background="#D6154F"
        android:onClick="mtdC"
        android:text="@string/btn_c"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/tvResultados" />

    <TextView
        android:id="@+id/tvResultados"
        android:layout_width="304dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:background="#FFFFFF"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textColor="#FF0056"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOperacoes" />

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/info"
        android:onClick="mtdInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_info" />

</androidx.constraintlayout.widget.ConstraintLayout>